# pgvectorscale-RAG-solution

./: LICENSE  README.md  pyproject.toml
app/: insert_vectors.py  similarity_search.py
data/: BankFAQs.csv
